# screamingfrog-report

./: .gitignore  README.md  main.py  pyproject.toml
config/: Accessibility.seospiderconfig
sfreport/: cli.py  config.py  crawl.py  report.py
